syntax = "proto3";

package com.example.directdebit.transaction;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

import "com/example/directdebit/transaction/transaction_domain.proto";

option java_outer_classname = "TransactionProcessor";

service TransactionProcessorAction {
  option (kalix.codegen) = {
    action: {}
  };
  rpc OnInitialized(Initialized) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
  }
  rpc OnDebitStarted(DebitStarted) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
  }
  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
  }
}